MDEV-7484: Log Time not consistent with InnoDB errors nor with MySQL error log time format